--- a/css/style.css
+++ b/css/style.css
@@ -158,9 +158,7 @@ body{
 	padding-bottom:10px;
 	margin-left:20px;
 
-	
-	
-	
+
 	
 	
 	
@@ -208,19 +206,19 @@ body{
 }
 
 .single-grid{
-	width:650px;
+	width:850px;
 	margin:0 auto;
 	padding-bottom:30px;
 }
 .single-grid h2{
-	color:#0066CC;
+	color:#E8A317;
 	font-size:18px;
 	margin:10px 0;
 }
 .single-grid p{
-	font-size:13px;
-	color:#888;
-	line-height:1.5em;
+	font-size:12px;
+	color:#000;
+	line-height:1.4em;
 }
 .preview{
 	text-align:center;
